--- a/AppTestMVVMBehavior/Views/Pages/ProgresSliderPage.xaml
+++ b/AppTestMVVMBehavior/Views/Pages/ProgresSliderPage.xaml
@@ -12,10 +12,16 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     Foreground="{ui:ThemeResource TextFillColorPrimaryBrush}"
-    Unloaded="Page_Unloaded"
     mc:Ignorable="d">
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <ui:TextBlock FontTypography="Title" Text="{Binding ViewModel.SliderRecibedValue}" />
+        <StackPanel>
+            <ui:ProgressRing Progress="{Binding ViewModel.SliderRecibedValue}" />
+            <ui:TextBlock
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                FontSize="18"
+                Text="{Binding ViewModel.SliderRecibedValue}" />
+        </StackPanel>
     </Grid>
 </Page>
